components/VerkkokauppaCom/Barometer/index.module.css
.priceBarometer {
    overflow-x: hidden;
    position: relative;
    width: 100%;
}

.priceBarometerImage {
    display: block;
    margin: 0 auto -48px auto;
    width: 368px;
}

.priceBarometerGraph {
    height: 120px;
    left: 50%;
    position: relative;
    transform: translateX(-50%);
    width: 1920px;
}

.priceBarometerText {
    composes: underlineA from '_template.module.css';
    margin: 0 auto 2rem auto;
    max-width: 480px;
    padding: 0 1rem;
}

.heading {
    composes: heading from '../index.module.css';
}

.priceBarometerText p {
    margin-bottom: 0.5rem;
}

